--- a/秋招经历/面经1️⃣.md
+++ b/秋招经历/面经1️⃣.md
@@ -1433,7 +1433,7 @@
 
 ### 2.操作系统基本知识
 
-##### **冯诺依曼结构有哪几个模块?分别对应现代计算机的哪几个部分?**
+##### 1. **冯诺依曼结构有哪几个模块?分别对应现代计算机的哪几个部分?**
 
 + 存储器：内存 
 + 控制器：南桥北桥 
@@ -1443,21 +1443,21 @@
 
 ---
 
-##### 1. **系统并发和并行，分得清吗?**
+##### 2. **系统并发和并行，分得清吗?**
 
 + 并发是指宏观上在一段时间内能同时运行多个程序，而并行则指同一时刻能运行多个指令。
 + 并行需要硬件支持，如多流水线、多核处理器或者分布式计算系统。
 
 > 操作系统通过引入进程和线程，使得程序能够并发运行。
 
-##### 2. **局部性原理你知道吗?主要有哪两大局部性原理?各自是什么?**
+##### 3. **局部性原理你知道吗?主要有哪两大局部性原理?各自是什么?**
 
 + 时间局部性：如果执行了程序中的某条指令，那么不久后这条指令很有可能再次执行；如果某个数据被访问过，不久之后该数据很可能再次被访问。(因为程序中存在大量的循环) 
 + 空间局部性：一旦程序访问了某个存储单元，在不久之后，其附近的存储单元也很有可能被访问。(因为很多数据在内存中都是连续存放的，并且程序的指令也是顺序地在内存中存放的)
 
 ---
 
-##### 3. Linux中异常和中断的区别
+##### 4. Linux中异常和中断的区别
 
 + 中断是由硬件设备产生的，从物理上说就是电信号，之后通过中断控制器发送给CPU，CPU判断收到的中断来自于哪个硬件设备(这定义在内核中)，最后由CPU发送给内核，内核处理中断。
 + 异常是由 CPU 执行指令的内部事件引起，如地址越界、算术溢出等。它会发送给内核，要求内核处理这些异常
@@ -1472,7 +1472,7 @@
 
 ---
 
-##### 4. **ASCII、Unicode和UTF-8编码的区别?**
+##### 5. **ASCII、Unicode和UTF-8编码的区别?**
 
 + ASCII
   + ASCII 只有127个字符，表示英文字母的大小写、数字和一些符号
@@ -1488,7 +1488,7 @@
 
 ---
 
-##### 为什么要有用户态和内核态，哪些操作会是用户态切换到内核态
+##### 6.为什么要有用户态和内核态，哪些操作会是用户态切换到内核态
 
 + 由于需要限制不同的程序之间的访问能力, 防止他们获取别的程序的内存数据, 或者获取外围设备的数据, 并发送到网络, CPU划分出两个权限等级 – 用户态和内核态。
 + **用户态切换到内核态的3种方式**
@@ -1504,7 +1504,7 @@
 
 ### 3.进程与线程
 
-##### **进程，线程和协程的区别和联系**
+##### 1. **进程，线程和协程的区别和联系**
 
 + 定义：
   + 进程： 进程是在内存中运行着的程序，是资源分配和拥有的基本单位
@@ -1542,7 +1542,7 @@
 
 ---
 
-##### **线程与进程的比较**
+##### 2. **线程与进程的比较**
 
 +  进程： 进程是在内存中运行着的程序，是资源分配和拥有的基本单位
 +  线程：线程是轻量级的进程，是最小的执行单位
@@ -1562,7 +1562,7 @@
 
 ---
 
-##### **介绍一下进程控制块PCB，及其中的内容**
+##### 3. **介绍一下进程控制块PCB，及其中的内容**
 
 + 每个进程在内核中都有一个进程控制块(PCB)来维护进程相关的信息，Linux内核的进程控制块是 task_struct结构体。
 + **PCB**内部重要成员
@@ -1575,7 +1575,7 @@
 
 ---
 
-##### 进程的创建方法
+##### 4. 进程的创建方法
 
 1. fork函数
 
@@ -1603,7 +1603,7 @@
 
 ---
 
-##### 你知道哪些替换进程映像的函数？
+##### 6. 你知道哪些替换进程映像的函数？
 
 1. exec系列函数
    + exec只是用磁盘上的一个新程序替换了当前进程的正文段、数据段、堆段和栈段
@@ -1617,7 +1617,7 @@
 
 ---
 
-##### 你知道exec函数族吗？
+##### 7. 你知道exec函数族吗？
 
 有7种不同的exec函数可供使用，它们常常被统称为exec函数.
 
@@ -1655,7 +1655,7 @@ int fexecve(int fd, char* const argv[], char* const envp[]);
 
 ---
 
-##### 线程的创建方法
+##### 8.线程的创建方法
 
 新增的线程可以通过调用**pthread_create**函数创建。
 
@@ -1705,7 +1705,7 @@ int main(void){
 
 ---
 
-##### 线程上下文切换的是什么?
+##### 9.线程上下文切换的是什么?
 
 + 得看线程是不是属于同一个进程：
   + 不属于同一个进程，则切换的过程就跟进程上下文切换一样;
@@ -1714,7 +1714,7 @@ int main(void){
 
 ---
 
-##### 用户态线程与内核态线程各有什么优势？
+##### 10.用户态线程与内核态线程各有什么优势？
 
 + 用户线程(**User Thread**)：在用户空间实现的线程，不是由内核管理的线程，是由用户态的线程库来完成线程的管理;
   + 用户级线程的模型是多对一的关系，即多个用户线程对应同一个内核线程
@@ -1737,7 +1737,7 @@ int main(void){
 
 ---
 
-##### **多进程和多线程的区别是什么?换句话说，什么时候该用多线程，什么时候该用多进程?**
+##### 11.**多进程和多线程的区别是什么?换句话说，什么时候该用多线程，什么时候该用多进程?**
 
 + 频繁修改：需要频繁创建和销毁的优先使用多线程
 + 计算量：需要大量计算的优先使用多线程， 因为需要消耗大量CPU资源且切换频繁
@@ -1748,7 +1748,7 @@ int main(void){
 
 ---
 
-##### **服务器高并发的解决方案你知道多少?**
+##### 12.**服务器高并发的解决方案你知道多少?**
 
 + 应用数据与静态资源分离
   + 将静态资源(图片，视频，js，css等)单独保存到专门的静态资源服务器中，在客户端访问的时候从静态资源服务器中返回静态资源，从主服务器中返回应用数据。
@@ -1763,7 +1763,7 @@ int main(void){
 
 ---
 
-##### 线程的回收方法
+##### 13. 线程的回收方法
 
 + pthread_join用于 阻塞等待线程退出，获取线程退出状态。 其作用对应进程中 waitpid() 函数。
 
@@ -1782,7 +1782,7 @@ int main(void){
 
 ---
 
-##### 线程分离方式
+##### 14.线程分离方式
 
 + pthread_detach 实现实现线程分离
 
@@ -1797,7 +1797,7 @@ int main(void){
 
 ---
 
-##### 线程取消方式：
+##### 15.线程取消方式：
 
 + pthread_cancel函数可以杀死(取消)线程。其作用，对应进程中 kill() 函数。
 
@@ -1808,7 +1808,7 @@ int main(void){
 
 ---
 
-##### 线程退出的方式：
+##### 16.线程退出的方式：
 
 1. Return：返回到调用者那里去，从**main**函数**return**相当于调用**exit**。 
 2. 线程可以调用**pthread_cancel**终止同一进程中的另一个线程。
@@ -1818,7 +1818,7 @@ int main(void){
 
 ---
 
-##### **你知道哪些进程？**
+##### 17.**你知道哪些进程？**
 
 + 孤儿进程：
 
@@ -1844,7 +1844,7 @@ int main(void){
 
 ---
 
-##### **进程终止的几种方式**
+##### 18.**进程终止的几种方式**
 
 + 5种正常终止
 
@@ -1882,7 +1882,7 @@ int main(void){
 
 ---
 
-##### **进程组、作业和会话**
+##### 19.**进程组、作业和会话**
 
 + 进程组：每个进程都会属于一个进程组，进程组包含一个或多个进程。进程组有进程组长，组长的进程 ID 是进程组 ID (PGID)
 
@@ -1909,7 +1909,7 @@ int main(void){
 
 ---
 
-##### **什么是惊群效应**
+##### 20.**什么是惊群效应**
 
 + 惊群现象就是多进程（多线程）在同时阻塞等待同一个事件的时候（休眠状态），当等待的事件发生，它会唤醒等待的所有进程（或者线程），但是最终却只可能有一个进程（线程）获得这个事件的“控制权”，其他进程（线程）获取失败，只能重新进入休眠状态，这种现象和性能浪费就叫做惊群。
 + 现象的影响：
@@ -1921,7 +1921,7 @@ int main(void){
 
 ---
 
-##### 一个进程可以创建多少个线程？和什么有关系？
+##### 21.一个进程可以创建多少个线程？和什么有关系？
 
 + 理论上，一个进程可用虚拟空间是2G，默认情况下，线程的栈的大小是1MB，理论上最多创建2048个线程。如果创建多于2048的话，必须修改编译器的设置。
 
@@ -1929,14 +1929,14 @@ int main(void){
 
 ---
 
-##### 介绍一下进程的上下文切换
+##### 22.介绍一下进程的上下文切换
 
 + 进程是由内核管理和调度的，所以进程的切换只能发生在内核态。所以，进程的上下文切换不仅包含了虚拟内存、栈、全局变量等用户空间的资源，还包括了内核堆栈、寄 存器等内核空间的资源。
 + 通常，会把交换的信息保存在进程的 PCB中，当要运行进程2时，需要把进程1的 PCB 取出上下文进行保存，CPU 中加载 进程2 的上下文，进程2进行执行.
 
 ---
 
-##### 进程上下文切换有哪些场景
+##### 23.进程上下文切换有哪些场景
 
 1. 时间片轮转时，当进程1的时间片耗尽了，进程1就从运行状态变为就绪状态，系统从就绪队列选择另外一个进程运行
 2. 进程在系统资源不足(内存不足)，要等到资源满足后才可以运行，这时进程会被挂 起，并由系统调度其他进程运行;
@@ -1945,7 +1945,7 @@ int main(void){
 
 ---
 
-#####  介绍一下进程状态的切换
+#####  24.介绍一下进程状态的切换
 
 + 新建态： 对应于进程刚刚被创建时没有被提交的状态，并等待系统完成创建进程的所有必要信息。
 + 终止态：进程已结束运行，回收除进程控制块之外的其他资源，并让其他进程从进程控制块中收集有关信息（如记帐和将退出代码传递给父进程）
@@ -1958,7 +1958,7 @@ int main(void){
 
 ---
 
-##### **共享是什么?**
+##### 25.**共享是什么?**
 
 + 共享是指系统中的资源可以被多个并发进程共同使用。
 + 有两种共享方式:
@@ -1969,13 +1969,13 @@ int main(void){
 
 ---
 
-##### **终端退出，终端运行的进程会怎样**
+##### 26.**终端退出，终端运行的进程会怎样**
 
 + 终端在退出时会发送SIGHUP给对应的bash进程，bash进程收到这个信号后首先将它发给session下面的进 程，如果程序没有对SIGHUP信号做特殊处理，那么进程就会随着终端关闭而退出
 
 ---
 
-##### **如何让进程后台运行**
+##### 27.**如何让进程后台运行**
 
 1. 命令后面加上&即可，实际上，这样是将命令放入到一个作业队列中了
 2. nohup + &，将标准输出和标准错误缺省会被重定向到 nohup.out 文件中，忽略所有挂断 (SIGHUP)信号
@@ -1983,7 +1983,7 @@ int main(void){
 
 ---
 
-##### **进程调度算法你了解多少?**
+##### 28.**进程调度算法你了解多少?**
 
 1. 先来先服务：非抢占式的调度算法，按请求顺序进行调度。有利于长作业，不利于短作业，短作业必须一直等待前面的长作业执行完毕才能执行
 2. 短作业优先：非抢占式的调度算法，按估计运行时间最短的顺序进行调度。长作业有可能会饿死，处于一直等待短作业执行完毕的状态。
@@ -1998,7 +1998,7 @@ int main(void){
 
 ---
 
-##### 进程同步的四种方法
+##### 29.进程同步的四种方法
 
 1. 临界区：对临界资源进行访问的那段代码称为临界区。 
 
@@ -2025,7 +2025,7 @@ int main(void){
 
 ---
 
-##### 信号量实现生产者消费者问题
+##### 30.信号量实现生产者消费者问题
 
 ```c++
 #define N 100
@@ -2057,7 +2057,7 @@ void consumer() {
 
 ---
 
-##### Linux下进程通信方式
+##### 31.Linux下进程通信方式
 
 + 管道
   + 无名管道：半双工通信方式，数据只能单向流动，而且只在具有亲缘关系的进程(父子)之间使用。
@@ -2071,7 +2071,7 @@ void consumer() {
 
 ---
 
-##### 你知道POSIX 与 System V的区别吗？
+##### 32.你知道POSIX 与 System V的区别吗？
 
 + Posix是Portable Operating System Interface(可移植性操作系统接口)的简称，是IEEE 开发的一系列标准，目的是为运行在不同操作系统的应用程序提供统一的接口，实现者是不同的操作系统内核。
 + System V 是UNIX系统升级到第五版本(System V)的时候制定的，原先只有管道，第五代添加了消息队列，信号量，共享内存。
@@ -2092,7 +2092,7 @@ void consumer() {
 
 ---
 
-##### 简单介绍一下管道通信
+##### 33.简单介绍一下管道通信
 
 + 最基本的IPC机制， **只作用于有血缘关系的进程之间。** 有如下特质：
 
@@ -2123,7 +2123,7 @@ void consumer() {
 
 ---
 
-##### 简单介绍一下命名管道函数FIFO
+##### 34.简单介绍一下命名管道函数FIFO
 
 + 允许在没有亲缘关系的进程之间使用，管道是先进先出的通信方式。
 
@@ -2142,7 +2142,7 @@ void consumer() {
 
 ---
 
-##### 简单介绍一下消息队列
+##### 35.简单介绍一下消息队列
 
 + 消息队列是内核创建的用于存放信息的链表。通信的进程通过共享操作同一个消息队列实现进程间通信。
 
@@ -2175,7 +2175,7 @@ void consumer() {
 
 ---
 
-##### 你知道共享内存吗？说一说你知道的内容
+##### 36.你知道共享内存吗？说一说你知道的内容
 
 + 存储映射I/O (Memory-mapped I/O) 将一个磁盘文件与存储空间中的缓冲区相映射。从缓冲区中取数据，就相当于读文件中的相应字节 。
 
@@ -2215,7 +2215,7 @@ void consumer() {
 
 ---
 
-##### 你知道匿名映射吗？
+##### 37.你知道匿名映射吗？
 
 + 映射区的缺陷：每次创建映射区一定要依赖一个文件。需要open一个temp文件，创建好了再unlink、close，麻烦。
 
@@ -2242,7 +2242,7 @@ void consumer() {
 
 ---
 
-##### 简单介绍一下信号量通信机制
+##### 38.简单介绍一下信号量通信机制
 
 + 如果多个进程同时修改同一个共享内存，很有可能冲突。为了防止竞争共享资源，需要保护机制，信号量机制就是其中一种
 
@@ -2262,7 +2262,7 @@ void consumer() {
 
 ---
 
-##### 你知道本地套接字吗？
+##### 39.你知道本地套接字吗？
 
 + socket编程
   + 「本地字节流 socket 」类型是 AF_LOCAL 和 SOCK_STREAM，「本地数据 报 socket 」类型是 AF_LOCAL 和 SOCK_DGRAM。另外，AF_UNIX 和 AF_LOCAL 是等价的，所以 AF_UNIX 也属于本地 socket;
@@ -2295,7 +2295,7 @@ void consumer() {
 
 ---
 
-##### 简单介绍一下信号
+##### 40.简单介绍一下信号
 
 + 上面说的都是常规状态下进程通信的工作模式。对于异常情况下的工作模式，就需要用「信号」的方 式来通知进程。
 
@@ -2344,7 +2344,7 @@ void consumer() {
 
 ---
 
-##### 你知道零拷贝吗？为什么需要
+##### 41.你知道零拷贝吗？为什么需要
 
 + 传统 I/O 的工作方式是，读取和写入数据是从用户空间到内核空间来回复制，而内核空间的数据是通过操作系统层面的 I/O 接口从磁盘读取或写入。一般会需要两个系统调用:
 
@@ -2367,7 +2367,7 @@ void consumer() {
 
 ---
 
-##### 如何实现零拷贝？有哪些技术
+##### 42.如何实现零拷贝？有哪些技术
 
 + 零拷⻉技术实现的方式通常有 2 种: 
   + mmap + write
@@ -2421,7 +2421,7 @@ void consumer() {
 
 ---
 
-##### Linux下的同步机制
+##### 43.Linux下的同步机制
 
 + POSIX信号量：可用于进程同步，也可用于线程同步。
 
@@ -2429,7 +2429,7 @@ void consumer() {
 
 ---
 
-##### 介绍几种典型的锁，你知道哪些线程锁
+##### 44.介绍几种典型的锁，你知道哪些线程锁
 
 加锁的目的：保证共享资源在任意时间里只有一个线程访问，这样就可以避免多线程导致共享数据错乱的问题。
 
@@ -2459,7 +2459,7 @@ void consumer() {
 
 ---
 
-##### 互斥锁与信号量的异同，条件变量与信号量的异同？
+##### 45.互斥锁与信号量的异同，条件变量与信号量的异同？
 
 + 条件变量的引入是为了解决互斥锁中的循环等待问题，其希望引入一种挂起、唤醒的机制来实现cpu的高效利用
 
@@ -2472,11 +2472,7 @@ void consumer() {
 
 ### 4.死锁
 
-+ 死锁的四个必要条件
-
-+ 举例子讲解如何解决死锁
-
-##### 哲学家进餐问题
+##### 1.哲学家进餐问题
 
 + 五个哲学家围着一张圆桌，每个哲学家面前放着食物。哲学家有两种交替活动：吃饭以及思考。 当一个哲学家吃饭时，需要先拿起自己左右两边的两根筷子，并且一次只能拿起一根筷子。
 
@@ -2487,14 +2483,14 @@ void consumer() {
 
 ---
 
-##### 读—写者问题
+##### 2.读—写者问题
 
 + 允许多个进程同时对数据进行读操作，但是不允许读和写以及写和写操作同时发生。
 + 一个整型变量 count 记录在对数据进行读操作的进程数量，一个互斥量 count_mutex 用于对 count 加锁， 一个互斥量 data_mutex 用于对读写的数据加锁。
 
 ---
 
-##### 原子操作是如何实现的？
+##### 3.原子操作是如何实现的？
 
 + 处理器使用基于对缓存加锁或总线加锁的方式来实现多处理器之间的原子操作。
 + 首先处理器会自动保证基本的内存操作的原子性。保证从系统内存中读取或者写入一个字节是原子的。复杂的内存操作处理器不能自动保证其原子性的，比如跨总线宽度、跨多个缓存行和跨页表的访问。但是提供 总线锁定 和 缓存锁定 两个机制来保证复杂内存操作的原子性。
@@ -2508,7 +2504,7 @@ void consumer() {
 
 ---
 
-##### 什么是死锁？死锁产生的原因是什么
+##### 4.什么是死锁？死锁产生的原因是什么
 
 +  当两个线程为了保护两个不同的共享资源而使用了两个互斥锁，这两个互斥锁应用不当时，可能会造成两个线程都在等待对方释放锁，在没有外力的作用下，这些线程会一直相互等待，没办法继续运行，这种情况就是发生了死锁。
 + 死锁只有同时满足以下四个条件才会发生:
@@ -2523,7 +2519,7 @@ void consumer() {
 
 ---
 
-##### 避免死锁的方式
+##### 5.避免死锁的方式
 
 死锁是由四个必要条件导致的，只要破坏这四个必要条件中的一个条件，死锁情况就应该不会发生。
 
@@ -2538,7 +2534,7 @@ void consumer() {
 
 ---
 
-##### 讲出你知道的所有解决死锁的方法
+##### 6.讲出你知道的所有解决死锁的方法
 
 1. 鸵鸟策略
    + 因为解决死锁问题的代价很高，因此鸵鸟策略这种不采取任务措施的方案会获得更高的性能。 
@@ -2557,7 +2553,7 @@ void consumer() {
 
 ---
 
-##### 模拟死锁产生的原因
+##### 7.模拟死锁产生的原因
 
 通过代码的形式进行演示，需要两个线程和两个互斥量。
 
@@ -2628,7 +2624,7 @@ int main() {
 
 ---
 
-##### 如果在死锁检查时发现了死锁情况，消除死锁的几种方式：
+##### 8.如果在死锁检查时发现了死锁情况，消除死锁的几种方式：
 
 1. 最简单、最常用的方法就是进行系统的重新启动，不过这种方法代价很大，它意味着在这之前所有的进程已经完成的计算工作都将付之东流，包括参与死锁的那些进程，以及未参与死锁的进程；
 
@@ -2651,7 +2647,7 @@ int main() {
 
 ### 5.内存
 
-##### **虚拟技术你了解吗?**
+##### 1.**虚拟技术你了解吗?**
 
 + 虚拟技术把一个物理实体转换为多个逻辑实体。
 + 主要有两种虚拟技术：时(时间)分复用技术 和 空(空间)分复用技术。
@@ -2660,7 +2656,7 @@ int main() {
 
 ---
 
-##### **虚拟内存的目的是什么?**
+##### 2.**虚拟内存的目的是什么?**
 
 + 虚拟内存的目的是为了让物理内存扩充成更大的逻辑内存，从而让程序获得更多的可用内存。
   1. 为了更好的管理内存，操作系统将内存抽象成地址空间。每个程序拥有自己的地址空间，这个地址空间被分割成多个块，每一块称为一页。
@@ -2669,7 +2665,7 @@ int main() {
 
 ---
 
-##### 谈谈你理解的逻辑地址，线性地址，物理地址和虚拟地址
+##### 3.谈谈你理解的逻辑地址，线性地址，物理地址和虚拟地址
 
 + 物理地址：用于内存芯片级的单元寻址，与处理器和CPU连接的地址总线相对应。
 
@@ -2680,7 +2676,7 @@ int main() {
 
 ---
 
-##### **讲解逻辑地址转换为物理地址的基本过程**
+##### 4.**讲解逻辑地址转换为物理地址的基本过程**
 
 如果是段⻚式，则地址变换中要得到物理地址须经过三次内存访问:
 
@@ -2692,13 +2688,13 @@ int main() {
 
 ---
 
-##### 什么是快表，那你知道多少关于快表的知识？
+##### 5.什么是快表，那你知道多少关于快表的知识？
 
 快表，又称联想寄存器(TLB) ，是一种访问速度比内存快很多的高速缓冲存储器，用来存放当前访问的若干页表项，以加速地址变换的过程。与此对应，内存中的页表常称为慢表。
 
 ---
 
-##### **地址变换中，有快表和没快表，有什么区别?**
+##### 6.**地址变换中，有快表和没快表，有什么区别?**
 
 + 无快表：
   1. 算页号、页内偏移量 
@@ -2716,7 +2712,7 @@ int main() {
 
 ---
 
-##### **程序从堆中动态分配内存时，虚拟内存上怎么操作的**
+##### 7.**程序从堆中动态分配内存时，虚拟内存上怎么操作的**
 
 + 在进行动态内存分配时，例如malloc()函数，操作系统会在硬盘中创建或申请一段虚拟内存空间，并更新到页表(分配一个页表条目(PTE)，使该PTE指向硬盘上这个新创建的虚拟页)，通过PTE建立虚拟页和物理页的映射关系。
 
@@ -2724,7 +2720,7 @@ int main() {
 
 ---
 
-##### **说一下你理解中的内存?他有什么作用呢?**
+##### 8.**说一下你理解中的内存?他有什么作用呢?**
 
 + 内存是用来存放数据的硬件。程序执行前需要先放入内存，然后才会被CPU进行处理
 + 在多道程序环境下，系统中有多个程序并发执行，怎么区分各自程序内存的数据？
@@ -2732,7 +2728,7 @@ int main() {
 
 ---
 
-##### **操作系统在对内存进行管理的时候需要做些什么**?
+##### 9.**操作系统在对内存进行管理的时候需要做些什么**?
 
 +  操作系统负责内存空间的分配与回收。
 +  操作系统需要提供某种技术从逻辑上对内存空间进行扩充。
@@ -2741,7 +2737,7 @@ int main() {
 
 ---
 
-##### **动态分区分配算法有哪几种?可以分别说说吗?**
+##### 10.**动态分区分配算法有哪几种?可以分别说说吗?**
 
 + 动态分区分配：进程的实际需要动态地为之分配内存空间，使分区的大小刚好与作业的大小相等。
 
@@ -2764,14 +2760,14 @@ int main() {
 
 ---
 
-##### 内存覆盖是什么？有什么特点？
+##### 11.内存覆盖是什么？有什么特点？
 
 + 由于程序运行时并非任何时候都要访问程序及数据的各个部分，因此可以把用户空间分成为一个固定区和若干个覆盖区。将经常活跃的部分放在固定区，其余部分按照调用关系分段，将即将要访问的段放入覆盖区，其他段放在外存中，在需要调用前，系统将其调入覆盖区，替换覆盖区中原有的段。
 + 覆盖技术的特点：是打破了必须将一个进程的全部信息装入内存后才能运行的限制，但当同时运行程序的代码量大于主存时仍不能运行，内存中能够更新的地方只有覆盖区的段，不在覆盖区的段会常驻内存。
 
 ---
 
-##### **内存交换是什么?有什么特点?**
+##### 12.**内存交换是什么?有什么特点?**
 
 + 内存空间紧张时，系统将内存中某些进程暂时换出外存，把外存中某些已具备运行条件的进程换入内存(进程在内存与磁盘间动态调度)
 
@@ -2780,14 +2776,14 @@ int main() {
 
 ---
 
-##### **在发生内存交换时，有些进程是被优先考虑的?你可以说一说吗?**
+##### 13.**在发生内存交换时，有些进程是被优先考虑的?你可以说一说吗?**
 
 + 优先换出阻塞进程;
 + 换出优先级低的进程；为了防止优先级低的进程在被调入内存后很快又被换出，有的系统还会考虑进程在内存的驻留时间(注意: PCB 会常驻内存，不会被换出外存)
 
 ---
 
-##### **内存交换和覆盖有什么区别?**
+##### 14.**内存交换和覆盖有什么区别?**
 
 + 交换技术主要是在不同进程(或作业)之间进行
 
@@ -2795,7 +2791,7 @@ int main() {
 
 ---
 
-##### **内存交换中，被换出的进程保存在哪里?**
+##### 15.**内存交换中，被换出的进程保存在哪里?**
 
 + 保存在磁盘中，也就是外存中。
 
@@ -2809,7 +2805,7 @@ int main() {
 
 ---
 
-##### **内存交换你知道有哪些需要注意的关键点吗?**
+##### 16.**内存交换你知道有哪些需要注意的关键点吗?**
 
 1. 交换需要备份存储，通常是快速磁盘，它必须足够大，并且提供对这些内存映像的直接访问。
 2. 为了有效使用CPU，需要进程执行时间比交换时间长，影响交换时间的主要是转移时间，转移时间与交换的空间内存成正比。
@@ -2817,7 +2813,7 @@ int main() {
 
 ---
 
-##### 交换空间与虚拟内存有什么关系？
+##### 17.交换空间与虚拟内存有什么关系？
 
 + 交换空间
   + Linux 中的交换空间(Swap space)在 **物理内存** (RAM)被充满时被使用。如果系统需要更多的内存资源，而物理内存已经充满，内存中不活跃的页就会被移到交换空间去。
@@ -2828,7 +2824,7 @@ int main() {
 
 ---
 
-##### Windows和Linux环境下内存分布情况
+##### 18.Windows和Linux环境下内存分布情况
 
 从 **低到高**  分别是 7 种不同的内存段:
 
@@ -2842,7 +2838,7 @@ int main() {
 
 ---
 
-##### 一般情况下在Linux/windows平台下栈空间的大小
+##### 19.一般情况下在Linux/windows平台下栈空间的大小
 
 + Linux下：非编译器决定栈大小，由操作系统环境决定，默认是8192KB(8M)
 
@@ -2860,7 +2856,7 @@ int main() {
 
 ---
 
-##### **从堆和栈上建立对象哪个快?(考察堆和栈的分配效率比较)**
+##### 20.**从堆和栈上建立对象哪个快?(考察堆和栈的分配效率比较)**
 
 + 从分配和释放方面：
   + 堆在分配和释放时都要调用函数(malloc,free)，比如分配时会到堆空间去寻找足够大小的空间(因为多次分配释放后会造成内存碎片)，这些都会花费一定的时间，而栈却不需要这些。
@@ -2870,7 +2866,7 @@ int main() {
 
 ---
 
-##### **常见内存分配方式有哪些?**
+##### 21.**常见内存分配方式有哪些?**
 
 1.  从静态存储区域分配。内存在程序编译的时候就已经分配好，这块内存在程序的整个运行期间都存在。例如全局变量，static变量。
 2. 在栈上创建。在执行函数时，函数内局部变量的存储单元都可以在栈上创建，函数执行结束时这些存储单元自动被释放。栈内存分配运算内置于处理器的指令集中，效率很高，但是分配的内存容量有限。
@@ -2878,7 +2874,7 @@ int main() {
 
 ---
 
-##### **常见内存分配内存错误**
+##### 22.**常见内存分配内存错误**
 
 1. 内存分配未成功，却使用了它。
    + malloc或new申请内存，用if(p!=NULL)进行防错处理。
@@ -2892,7 +2888,7 @@ int main() {
 
 ---
 
-##### **在执行malloc申请内存的时候，操作系统是怎么做的?**
+##### 23.**在执行malloc申请内存的时候，操作系统是怎么做的?**
 
 + 从操作系统层面上看，malloc 是通过两个系统调用来实现的: brk和mmap
 + 进程先通过这两个系统调用获取或者扩大进程的虚拟内存，获得相应的虚拟地址，在访问这些虚拟地址的时候，通过缺页中断，让内核分配相应的物理内存，这样内存分配才算完成。
@@ -2903,7 +2899,7 @@ int main() {
 
 ---
 
-#####  **抖动你知道是什么吗?它也叫颠簸现象**
+##### 24. **抖动你知道是什么吗?它也叫颠簸现象**
 
 +  刚刚换出的页面立刻换入内存，刚刚换入的页面又要换出外存，这种频繁的页面调度行为称为 **抖动，或颠簸** 。
 +  产生抖动的主要原因是：进程频繁访问的页面数目高于可用的物理块数(分配给进程的物理块不够)
@@ -2912,7 +2908,7 @@ int main() {
 
 ---
 
-##### 介绍一下内部碎片与外部碎片
+##### 25.介绍一下内部碎片与外部碎片
 
 + 内碎片：分配给某些进程的内存区域中有些部分没用上，常见于固定分配方式
   + 内存总量相同，100M
@@ -2923,7 +2919,7 @@ int main() {
 
 ---
 
-**如何消除碎片文件** 
+##### 26.**如何消除碎片文件** 
 
 +  对于外部碎片，通过 **紧凑技术** 消除，就是操作系统不时地对进程进行移动和整理。但是这需要动态重定位寄存器地支持，且相对费时。
 + 分⻚技术就是为了解决碎片问题，分页是把整个虚拟和物理内存空间切成一段段固定尺寸的大小。 这样一个连续并且尺寸固定的内存空间就是⻚(Page) 。
@@ -2932,7 +2928,7 @@ int main() {
 
 ---
 
-##### ⻚表项通常有哪些字段？
+##### 27.⻚表项通常有哪些字段？
 
 + 页号：
 
@@ -2945,7 +2941,7 @@ int main() {
 
 ---
 
-##### 什么是缺页异常(缺页中断)？
+##### 28.什么是缺页异常(缺页中断)？
 
 当 CPU 访问的⻚面不在物理内存时，会产生缺⻚中断，请求操作系统将所缺⻚调入到物理内存。与一般中断的区别在:
 
@@ -2965,7 +2961,7 @@ int main() {
 
 ---
 
-##### 页面置换算法你知道多少？
+##### 29.页面置换算法你知道多少？
 
 功能：当出现缺⻚异常需调入新⻚面而内存已满时，选择一个物理⻚面换出到磁盘，然后把需要访问的⻚面换入到物理⻚
 
@@ -3011,7 +3007,7 @@ int main() {
 
 ### 6.磁盘
 
-##### 读写一个磁盘块的时间的影响因素有哪些？
+##### 1.读写一个磁盘块的时间的影响因素有哪些？
 
 + 旋转时间(主轴转动盘面，使得磁头移动到适当的扇区上)
 + 寻道时间(制动手臂移动，使得磁头移动到适当的磁道上)
@@ -3019,7 +3015,7 @@ int main() {
 
 > 其中，寻道时间最长，因此磁盘调度的主要目标是使磁盘的平均寻道时间最短
 
-##### 介绍常见的几种磁盘调度算法
+##### 2.介绍常见的几种磁盘调度算法
 
 1.  **先来先服务** ：按照磁盘请求的顺序进行调度。 
    + 优点：公平和简单。
@@ -3036,8 +3032,6 @@ int main() {
 
 ### 1,Mysql
 
-+ truncate 和delete区别
-
 + 索引分类和原理----B+树，具体分析
 
 + 数据库锁有哪些，造成原因
@@ -3050,33 +3044,151 @@ int main() {
 
 + 介绍一下数据库索引(B+树、哈希索引、LSM树之类)
 
-+ 索引的类别和使用场景
 +  Mysql如何实现主从一致性
 
 ---
 
-+   **你知道关系型和非关系型数据库吗？区别了解多少?**
-  + 关系型数据库
-    + 采用关系模型来组织数据的数据库。简单来说，关系模式就是二维表格模型。代表：SQL Server,Oracle,Mysql
-    + 优点：
-      + 容易理解，二维表的结构非常贴近现实世界，二维表格，容易理解。
-      + 使用方便，通用的sql语句使得操作关系型数据库非常方便。
-      + 易于维护，数据库的ACID属性，大大降低了数据冗余和数据不一致的概率。
-    + 缺点：
-      + 不适合海量数据的读写效率。对于传统关系型数据库来说，硬盘I/o是一个很大的挑战。
-      + 无高扩展性和可用性。在基于web的结构中，数据库是最难以横向拓展的
-  + 非关系型数据库
-    + 非关系型数据库也叫NOSQL，采用键值对的形式进行存储。代表：MongoDB，Redis
-    + 优点：
-      + 不需要经过SQL层的解析，读写效率高。 
-      + 基于键值对，数据的扩展性很好。 
-      + 支持多种类型数据的存储，如图片，文档等等。
-    + 缺点：
-      + 由于Nosql约束少，不能像sql那样提供where字段属性的查询。因此适合存储较为简单的数据。有一些不能够持久化数据，所以需要和关系型数据库结合。
+#####   1. **你知道关系型和非关系型数据库吗？区别了解多少?**
+
++ 关系型数据库
+  + 采用关系模型来组织数据的数据库。简单来说，关系模式就是二维表格模型。代表：SQL Server,Oracle,Mysql
+  + 优点：
+    + 容易理解，二维表的结构非常贴近现实世界，二维表格，容易理解。
+    + 使用方便，通用的sql语句使得操作关系型数据库非常方便。
+    + 易于维护，数据库的ACID属性，大大降低了数据冗余和数据不一致的概率。
+  + 缺点：
+    + 不适合海量数据的读写效率。对于传统关系型数据库来说，硬盘I/o是一个很大的挑战。
+    + 无高扩展性和可用性。在基于web的结构中，数据库是最难以横向拓展的
++ 非关系型数据库
+  + 非关系型数据库也叫NOSQL，采用键值对的形式进行存储。代表：MongoDB，Redis
+  + 优点：
+    + 不需要经过SQL层的解析，读写效率高。 
+    + 基于键值对，数据的扩展性很好。 
+    + 支持多种类型数据的存储，如图片，文档等等。
+  + 缺点：
+    + 由于Nosql约束少，不能像sql那样提供where字段属性的查询。因此适合存储较为简单的数据。有一些不能够持久化数据，所以需要和关系型数据库结合。
 
 ---
 
+##### 说一下MySQL是如何执行一条SQL的?具体步骤有哪些?
 
+1. 客户端请求->
+2. 连接器 (验证用户身份，给予权限) ->
+3. 查询缓存(存在缓存则直接返回，不存在则执行后续操作)->
+4. 分析器 (对SQL进行词法分析和语法分析操作) ->
+5. 优化器(主要对执行的sql优化选择最优的执行方案方法) ->
+6. 执行器(执行时会先看用户是否有执行权限，有才去使用这个引擎提供的接口)-> 
+7. 去引擎层获取数据返回(如果开启查询缓存则会缓存查询结果)
+
+---
+
+##### **你了解MySQL的内部构造吗?**
+
+以分为服务层和存储引擎层两部分：
+
++ 服务层： **连接器、查询缓存、分析器、优化器、执行器等**，涵盖MySQL的大多数核心服务功能，以及所有的内置函数(如日期、时间、数学和加密函数等)，所有跨存储引擎的功能都在这一层实现，比如存储过程、触发器、视图等。
++ 存储引擎层：**负责数据的存储和提取**。其架构模式是插件式的，支持InnoDB、MyISAM、Memory等多个 存储引擎。现在最常用的存储引擎是InnoDB
+
+---
+
+##### MySQL优化了解吗?说一下从哪些方面可以做到性能优化?
+
++ 为搜索字段创建索引
++ 避免使用 Select *，列出需要查询的字段 
++ 垂直分割分表
++ 选择正确的存储引擎
+
+---
+
+##### 说一说Drop、Delete与Truncate的共同点和区别
+
++ Drop、Delete、Truncate都表示删除，但是三者有一些差别: 
+
+  +  **Delete** ：用来删除表的全部或者一部分数据行，执行delete之后，用户需要提交(commmit)或者回滚 (rollback)来执行删除或者撤销删除，会触发这个表上所有的delete触发器。
+  +  **Truncate** ：删除表中的所有数据，这个操作不能回滚，也不会触发这个表上的触发器，TRUNCATE比 delete更快，占用的空间更小。 
+  +  **Drop** ：命令从数据库中删除表，所有的数据行，索引和权限也会被删除，所有的DML触发器也不会被触 发，这个命令也不能回滚。
+
+  删除部分数据行用Delete；在保留表而删除所有数据用Truncate。不再需要一张表用Drop；
+
+---
+
+##### MySQL中为什么要有事务回滚机制?
+
++ 在MySQL 中，恢复机制是通过回滚日志(undo log)实现的，所有事务进行的修改都会先记录到这个回滚日志中，然后在对数据库中的对应行进行写入。 当事务已经被提交之后，就无法再次回滚了。
+
++ 回滚日志的作用：
+  + 在发生错误或者用户执行 ROLLBACK 时提供回滚相关的信息
+  + 在整个系统发生崩溃、数据库进程直接被杀死后，当用户再次启动数据库进程时，还能够立刻通过查询回滚日志将之前未完成的事务进行回滚
+
+---
+
+##### MySQL中CHAR和VARCHAR的区别有哪些?
+
++ char的长度是不可变的，用空格填充到指定长度大小，而varchar的长度是可变的。 
++ char的存取数度还是要比varchar要快得多 char的存储方式是:对英文字符(ASCII)占用1个字节，对一个汉字占用两个字节。
++ varchar的存储方 式是:对每个英文字符占用2个字节，汉字也占用2个字节
+
+---
+
+##### 你知道哪些数据库结构优化的手段？
+
++ **范式优化** : 比如消除冗余(节省空间。。) 
++  **反范式优化** :比如适当加冗余等(减少join)
++  **限定数据的范围**: 务必禁止不带任何限制数据范围条件的查询语句
++   **读写分离**: 经典的数据库拆分方案，主库负责写，从库负责读
++  **拆分表** :分区将数据在物理上分隔开，不同分区的数据可以制定保存在处于不同磁盘上的数据文件里。这样，当对这个表进行查询时，只需要在表分区中进行扫描，而不必进行全表扫描，明显缩短查询时间
+
+---
+
+##### 什么是事务，它有哪些特性？
+
++ 事务是指是程序中一系列严密的逻辑操作，而且所有操作必须全部成功完成，否则在每个操作中所作的所有更改都会被撤消。可以通俗理解为：就是把多件事情当做一件事情来处理，好比大家同在一条船上，要活一起活，要完一起完 
++ 特性 **（ACID）** ：
+  + 原子性：操作这些指令时，要么全部执行成功，要么全部不执行。只要其中一个指令执行失败，所有的指令都执行失败，数据进行回滚，回到执行指令前的数据状态。
+  + 一致性：事务的执行使数据从一个状态转换为另一个状态，但是对于整个数据的完整性保持稳定。
+  + 隔离性：当多个用户并发访问数据库时，比如操作同一张表时，数据库为每一个用户开启的事务，不能被其他事务的操作所干扰，多个并发事务之间要相互隔离。
+  + 持久性：当事务正确完成后，它对于数据的改变是永久性的。
+
+---
+
+##### 数据库如何保证原子性
+
++ 利用 Innodb 的回滚日志是实现原子性的关键，当事务执行失败调用了**rollback**，让事务需要回滚，撤销所有已经成功执行的 SQL语句，将数据回滚到修改之前的样子。
+
+---
+
+##### 数据库如何保证一致性
+
++ 从两个层面来讲解：
+  +  **数据库层面** ，数据库通过原子性、隔离性、持久性来保证一致性。也就是说ACID四大特性之中， C(一致性)是目的，A(原子性)、I(隔离性)、D(持久性)是手段，是为了保证一致性，数据库必须要实现AID三大特性，才有可能实现一致性。
+  +  **应用层面** ，通过代码判断数据库数据是否有效，然后决定回滚还是提交数据
+
+---
+
+##### 数据库如何保证持久性
+
++ 利用Innodb的 **redo log** ，即重写日志。
++ 当做数据修改的时候，不仅在内存中操作，还会在 **redo log** 中记录这次操作。当事务提交的时候，会将重写日志进行刷盘(重写日志一部分在内存中，一部分在磁盘上)。
++ 当数据库宕机重启的时候，会将redo log中的内容恢复到数据库中，再根据 **undo log** 和 **binlog** 内容决定回滚数据还是提交数据。
+
+---
+
+##### 什么是索引？为什么使用索引？
+
++ 索引是一个单独的、存储在磁盘上的数据库结构，它们包含着对数据表里所有记录的引用指针。
++ 原因：
+  + 通过创建唯一性索引，可以保证数据库表中每一行数据的唯一性。
+  + 最主要的原因是可以大大加快数据的检索速度
+  + 帮助服务器避免排序和临时表
+  + 可以加速表和表之间的连接，特别是在实现数据的参考完整性方面特别有意义
+
+---
+
+##### 索引的分类与原理以及应用场景
+
+
+
+---
 
 
 
