--- a/秋招经历/面经2️⃣.md
+++ b/秋招经历/面经2️⃣.md
@@ -1823,8 +1823,15 @@ s2 = s; // 赋值运算符操作
 
 ## 五.WebServer项目相关
 
+* 利用正则与状态机解析HTTP请求报文，实现处理静态资源的请求；
+* 利用标准库容器封装char，实现自动增长的缓冲区；
+* 基于小根堆实现的定时器，关闭超时的非活动连接；
+
 +  **介绍一下你的WebServer项目**
-   + 这是一个服务器项目
+   + 自己用C++11改写了一个简单的Reactor高并发模型服务器。主线程初始化一个线程池，然后进行绑定IP与端口，创建socket socketfd，利用IO复用技术Epoll创建epoll模型efd，将socketfd添加至EPOLL中，进行监听事件与数据读写。定义httpconn类封装任务事件，定义httpconn类数组users；
+   + 如果监听到连接事件发生，则进行accpet连接，新建socket文件描述符 connfd ，然后将连接的用户数据放入 users 数组中并初始化，顺便添加至epoll中进行监听。
+   + 如果有EPOLLIN事件，则先将对应connfd的数据一次性读完，然后将任务添加到线程池中的任务队列中，让线程池中的线程进行逻辑任务操作，即解析HTTP请求，生成响应发送。
+   + 如果有EPOLLOUT事件，则将将数据一次性写完
 
 ---
 
@@ -1865,10 +1872,41 @@ s2 = s; // 赋值运算符操作
 
 ---
 
-+  **线程池的优点是什么？**
-   + 线程池旨在降低创建和销毁线程的频率，使其维持合理数量的线程，并让空闲的线程重新承担新的任务 。
-   + 连接池是指维持连接的缓存池，尽量重用已有的连接，降低创建和关闭连接的频率。
-   + 这两种技术能降低系统开销，但当请求数目远远大于池中元素的数目时，没有显著的效果。特别是在阻塞IO下。
+##### **线程池的优点是什么？**
+
++ 线程池旨在降低创建和销毁线程的频率，使其维持合理数量的线程，并让空闲的线程重新承担新的任务 。
++ 连接池是指维持连接的缓存池，尽量重用已有的连接，降低创建和关闭连接的频率。
++ 这两种技术能降低系统开销，但当请求数目远远大于池中元素的数目时，没有显著的效果。特别是在阻塞IO下。
+
+---
+
+##### 你是怎么设计线程池的？
+
++ 定义了一个ThreadPool类，其中的将一个Pool类与Pool类型的智能指针pool。其中Pool类有四个元素，分别为：
+  + mutex锁 mtx
+  + 条件变量 cond
+  + bool 类型的标志，表示是否关闭线程池
+  + 任务队列 tasks，元素是Function函数
++ 首先定义构造函数：
+  + 默认传入参数ThreadCount表示创建8个线程，初试列表中动态创建一个动态指针对象，即定义一个线程池。
+  + 在构造函数体中，进行for循环，利用Thread函数创建线程，并设置为分离detach，其中thread参数是lambda函数，在lambda函数中，将新建的线程池对象传入其中，lambda函数体中先用unique_lock锁住，然后进行while循环，不断取出任务队列，进行任务操作，当队列为空时，阻塞等待有工作线程入队的通知
++ 定义析构函数，析构函数体中将bool 标志设置为关闭线程池，通知所有线程，则所有线程函数都break while循环
++ 定义添加任务函数 AddTask，首先进行lock_guard加锁，然后将传来的task参数初始化封装成任务，并添加到任务队列中。解锁，并利用条件变量通知线程池中的一个线程。
+
+```c++
+//条件变量的定义：
+std::condition_variable cond;
+std::mutex mtx;
+std::unique_lock<std::mutex> locker(mtx);
+//条件变量进行阻塞
+cond.wait(locker);
+//唤醒所有线程
+cond.notify_all();
+//唤醒一个线程
+cond.notify_one(); 
+```
+
+---
 
 +  项目里实现了哪些HTTP请求呢，处理的时候如何分辨这些请求呢？
 +  设想这样一种场景，我的web服务器里面有一张表格，现在浏览器需要请求这个表格中 id=张三 的内容，同时返回到浏览器也需要以表格的形式展现。
