--- a/秋招经历/面经框架.md
+++ b/秋招经历/面经框架.md
@@ -57,126 +57,33 @@
 
 ### 1.网络层
 
-
-
-
-
 ### 2.传输层
 
 ##### 1. **是什么是TCP 粘包/拆包 ？ 发生的原因？**
 
 ##### 2. **讲讲TCP KeepAlive(保活机制,即心跳包)**
 
-+ TCP连接的双方在连接空闲状态时，如果一方意外崩溃、当机、网线断开或路由器故障，另一方无法得知TCP连接已经失效。另一方并不知道对端的情况，会一直维护这个连接。长时间的积累会导致非常多的半打开连接，造成端系统资源的消耗和浪费，
-+ 所以当一个 TCP 连接建立之后，启用 TCP Keepalive 的一端便会启动一个计时器，当这个计时器经过tcp_keep-alive_time时间到达 0 之后便会被发出纯 ACK 包去进行探测。根据对方的回应做出后序操作。
-
----
-
 ##### 3. **传输层的工作内容是什么？**
-
-+ 从通信和信息处理的角度看，运输层向上面的应用层提供通信的服务，属于面向通信部分的最高层，也是用户功能部分的最底层。(只有网络边缘部分的主机协议栈才有运输层)
-
----
 
 ##### 4. **网络层与传输层的区别？**
 
-+ 网络层是为主机之间提供逻辑通信
-+ 传输层为应用进程之间提供端到端的逻辑通信
-
----
-
 ##### 5. **运输层有什么重要功能？**
-
-+ 主机中实现多个应用进程分别与另一台主机中的多个应用进程通信，拥有复用与分用的能力
-  + 复用： 发送方不同应用进程都能使用同一个运输层协议传输数据（加上适当的首部）
-  + 分用： 接收方的运输层在剥去报文的首部后，能把数据正确的交付给对应的目的进程
-
----
 
 ##### 6. **在运输层中端口有什么作用？**
 
-+ 从运输层的角度看，通信的对象是进程，而端口就代表了进程。
-  + 端口用一个16位端口号进行标记
-  + 只需有本地意义，只标记了本计算机应用层的各个进程
-
----
-
 ##### 7. **一台机器能够使用的端口号上限是多少，是否可以修改?如果想要用的端口超过这个限制怎么办? **
-
-+ 65536个。 TCP的报文头部源端口号和目的端口号的长度是16位，表示 $2^{16}=65536$ 个不同端口号。但0到1023是知名服务端口，所以实际上会少1024个端口号。
-+ 而对于服务器来说，端口数目与65536无关，受限Linux可以打开的文件数量，并且通过MaxUserPort 进行配置。
-
----
 
 ##### 8. **封包和拆包你听说过吗?它是基于TCP还是UDP的?**
 
-+   封包和拆包都是基于TCP的。因为TCP是无边界的流传输，所以需要对TCP进行封包和拆包，确保发送和接收的数据不粘连。
-    + 封包：在发送数据报时为每个TCP数据包加上一个包头，将数据报分为包头和包体两个部分。包头是一个固定长度的结构体，里面包含该数据包的总长度。 
-    + 拆包：接收方在接收到报文后提取包头中的长度信息进行截取。
-
----
-
 ##### 9. **用户数据报协议UDP(User Datagram Protocol) 有什么特点？**
-
-1. 面向报文的，对应用层交付的报文，不合并也不拆分，加上首部之后直接发送
-
-   > + 报文太长，交给IP层之后，IP层可能会分片，降低IP层效率
-   > + 报文太短，交给IP层之后，显得IP数据报首部相对长度太长，也降低IP层效率
-
-2. 无连接的：发送消息之前不需要建立连接，减少了开销与发送数据之前的延迟
-
-3. 尽最大努力交付：不保证可靠交付，因此主机之间不需要维持复杂的连接状态表
-
-4. 没有拥塞控制：因此网络拥塞时不会使源主机的发送速率降低，符合多媒体通信要求
-
-5. 支持一对一，一对多，多对一，多对多的交互通信
-
-6. 首部开销小，只有8字节，比TCP的20字节小
-
----
 
 ##### 10. **介绍一下UDP的首部格式**
 
-+ UDP有两个字段：  首部字段 和 数据字段。首部字段有8个字节，由4个字段组成，每个字段占两个字节：
-  + 源端口： 源端口号。需要给对方回信时使用，不用时赋予0
-  + 目的端口： 目的端口号。 在终点交付报文时必须使用
-  + 长度：UDP数据报的长度，最小值为8
-  + 检验和：检验UDP 数据报在传输过程中是否出错，出错则丢弃
-
----
-
-##### 11. **在进行UDP编程的时候，一次发送多少bytes好?**
-
-+ IP数据报大于1500字节(MTU)时需要分片。建议将UDP的数据控制在1472字节以下(1500-ip头-UDP头).
-+ 进行Internet编程时则不同，因为Internet上的路由器可能会将MTU设为不同的值. 如果我们假定MTU为1500来发送数据的,而途经的某个网络的MTU值小于1500字节,那么系统将会使用一 系列的机制来调整MTU值,使数据报能够顺利到达目的地,这样就会做许多不必要的操作.
-+ 鉴于Internet上的标准MTU值为576字节。建议在进行Internet的UDP编程时. 最好将UDP的数据长度控件在548字节(576-8-20)以内
-
----
+##### 11. **在进行UDP编程的时候，一次发送多少bytes好?** (Internet 编程时MSS为576)
 
 ##### 12. **为什么需要TCP协议？**
 
-+ IP层是不可靠，不保证网络包的按需交付与数据完整性。
-+ 如果需要保证传输过程可靠，则需要上层的TCP协议来负责，TCP能保证接收端收到的网络包是按序，无损坏的
-
----
-
 ##### 13. **介绍一下 传输控制协议TCP(Transmission Control Protocol)，它有什么特点？**
-
-+ TCP是面向连接的运输层协议，在无连接，不可靠的IP层网络服务基础上提供 **可靠交付** 的 **基于字节流** 的传输层通信协议
-
-  + 面向连接： TCP连接只支持点对点的，只有两个端点
-
-  + 可靠的：传输过程中无论网络链路怎么变化，TCP第一能保证报文能达到接收端
-
-  + 面向字节流： 虽然应用程序与TCP以数据块的形式交互，但TCP把上层交付下来的数据仅看成是一连串无结构的字节流
-
-    > TCP 不保证接收方应用程序数据块与发出的数据块大小对应，但字节流必须完全一样。
-
-+ 传输过程的特点：
-
-  + TCP 根据对方给出的窗口值和当前网络拥塞的程度来决定一个报文段应包含多少个字节（UDP 发送的报文⻓ 度是应用进程给出的）
-  + TCP 可把太⻓的数据块划分短一些再传送
-  + TCP 也可等待积累有足够多的字节后再构成报文段发送出去
 
 ---
 
@@ -186,7 +93,7 @@
   + 源端口号 (2 bytes)，目的端口号 (2 bytes)
   + 序号  (4 bytes)
   + 确认号  (4 bytes)
-  + 数据偏移， 保留，紧急URG，确认ACK，推送PSH，复位RST，同步SYN，终止FIN，窗口 (2 bytes)
+  + 数据偏移(4bits)， 保留(6bits)，紧急URG，确认ACK，推送PSH，复位RST，同步SYN，终止FIN，窗口 (2 bytes)
   + 检验和  (2 bytes)，紧急指针 (2 bytes)
   + 选项字段 ，填充(首部是4字节的整数倍)
 
@@ -194,94 +101,19 @@
 
 ##### 16. **常见TCP的连接状态有哪些?**
 
----
-
 ##### 17. **介绍一下TCP的连接的端点与协商内容**
-
-+ TCP面向的是套接字，连接端点称为socket或者插口
-
-  <div align  = center>socket = ip地址 + 端口号 </div>
-
-+ 建立TCP连接时需要通信两端达成三个信息的共识
-
-  + socket：即IP地址与端口号
-  + 序列号：用来解决乱序问题
-  + 窗口大小：用作流量控制
-
----
 
 ##### 18. **如何确定一个TCP连接**
 
-+ 源地址，源端口，目的地址，目的端口，这四元组能确定一个连接
-  + 源地址，目的地址 在IP头部，通过IP协议将报文发送到具体主机
-  + 源端口，目的端口 在TCP头部，通过TCP协议将报文发送到具体进程
-
----
-
 ##### 19. **有一个 IP 的服务器监听了一个端口，它的 TCP 的最大连接数是多少？**
-
-+ 最大TCP连接数 = 客户端 IP 数 * 客户端的端口数
-
-+ 对 IPv4， IP 数最多为 $2^{32}$ ，端口数最多为$2^{16}$，则最大 TCP连接数为 $2^{48}$。但远不能到达这个上限值。
-
-  > + 文件描述符限制，Socket 都是文件，要通过 ulimit 配置文件描述符的数目;
-  > + 内存限制
-
----
 
 ##### 20. **什么是半连接队列？**
 
-+ 服务器第一次收到客户端的 SYN 之后处于 SYN_RCVD 状态，此时双方还没有完全建立其连接，服务器会把此种状态下请求连接放在一个 **队列** 里，这就是 **半连接队列** 。
-+ 对应自然有 **全连接队列**，就是已经完成三次握手，建立起连接的就会放在全连接队列中。如果队列满了就有可能会出现丢包现象。
-
----
-
 ##### 21. **TCP与UDP有哪些区别？**
 
-1. 连接：
-   +  TCP面向连接传输协议，传输数据之前需建立连接，UDP无连接，即可传输
-2. 服务对象
-   + TCP点对点
-   + UDP都行
-3. 传输方式
-   + TCP 面向连接，基于字节流，无边界，但保证有序与可靠
-   + UDP直接发送包，有边界，但可能出现丢包与乱序
-4. 可靠性
-   + TCP是可靠交付数据，有序，不丢失，无损伤
-   + UDP尽最大努力传输，不保证可靠性
-5. 拥塞控制，流量控制
-   + TCP有拥塞控制与流量控制机制，保证数据传输的安全性
-   + UDP没有，就算网络拥堵也不影响发送速率
-6. 首部开销
-   + TCP首部较长，没有使用选项字段时为20字节，开销较大
-   + UDP首部只有8字节，固定不变，开销较小
-7. 分片方法
-   + TCP是在传输层进行分片，当数据大于MSS，TCP会进行分片，若中途丢失一个分片，只需重发对应分片即可
-   + UDP是在网络层进行分片，当数据大于MTU，IP会进行分片，若中途丢失一个分片，在实现可靠传输的 UDP 时需重传整个的数据包，所以通常UDP报文应该小于MTU
-8. 应用场景
-   + TCP是可靠交付，用于
-     + FTP文件传输
-     + HTTP/HTTPS
-   + UDP 无连接，可随时发送，处理简单高效
-     + 包总量较小的通信，如DNS，SNMP
-     + 视频，音频等多媒体通信
-     + 广播通信
-
----
-
-##### 22. **为什么UDP头部没有 首部长度 字段，而TCP有？**
-
-+ TCP有可变长的 选项 字段，所以需要记录长度
-+ UDP首部大小固定，无需记录
-
----
+##### 22. **为什么UDP头部没有首部长度字段，而TCP有？**
 
 ##### 23. **为什么 UDP 头部有「包⻓度」字段，而 TCP 头部则没有「包⻓度」字段呢?**
-
-+ TCP 是计算负载数据⻓度:  TCP数据的⻓度 =  IP总⻓度 - IP首部⻓度 - IP首部⻓度
-+ UDP其实也可以这么计算，但可能是为了网络设备硬件设计和处理方便，首部⻓度需 **4** 字节整数倍。利用字段可能可能是为了补全。
-
----
 
 ##### 24. **TCP连接建立过程中要解决哪些问题？**
 
