--- a/秋招经历/面经1️⃣.md
+++ b/秋招经历/面经1️⃣.md
@@ -243,9 +243,9 @@
 ##### 1. **OSI的七层模型是什么？有哪些功能？**
 
 + 物理层：底层数据传输，如网线;网卡标准。传输的数据称为比特流
-+  数据链路层：定义数据的基本格式，如何传输，如何标识;如网卡MAC地址。 传输的数据称为帧
++  数据链路层：定义数据的基本格式，如何传输，如何标识；如网卡MAC地址。 传输的数据称为帧
 + 网络层：定义IP编址，定义路由功能：如不同设备的数据转发。 传输的数据称为包
-+ 传输层：端到端传输数据的基本功能;如 TCP、UDP。 传输的数据称为段
++ 传输层：端到端传输数据的基本功能；如 TCP、UDP。 传输的数据称为段
 + 会话层：控制应用程序之间会话能力;如不同软件数据分发给不同软件。 
 + 表示层：数据格式标识，基本压缩加密功能。
 + 应用层：各种应用软件，包括 Web 应用。
@@ -254,9 +254,10 @@
 
 ##### 2. **计算机网络体系为什么要按照现有体系进行分层？**
 
-+ 各层之间相互独立：高层不需要知道底层功能是如何实现的，只需知道通过与底层提供的接口就获得所需要的服务
++ 模块化和标准化：根据计算机网络的功能与提供的服务将系统进行这样分层，使网络系统更易于设计，实现和标准化
+
++ 各层之间相互独立：高层不需要知道底层功能是如何实现的，只需知道利用底层提供的接口来获得所需要的服务
 + 灵活性好：各层的实现无论如何修改，只要提供的功能与接口保持不变，就不会对其他各层以及整个系统产生影响
-+ 易于实现和标准化：采取规范的层次结构去组织网络功能与协议，可以将计算机网络复杂的通信过程划分为有序的连续动作与有序的交互过程，使网络系统变得易于设计，实现和标准化
 
 ---
 
@@ -295,9 +296,9 @@
 
 ##### 1. **是什么是TCP 粘包/拆包 ？ 发生的原因？**
 
-+ 一个完整的业务可能被TCP拆分成多个包发送，也有可能多个包数据到接收方接收时粘成一包，这个就是TCP的拆包和粘包问题。
++ 一个完整的业务可能被TCP拆分成多个包发送，可能多个包数据到接收方接收时粘成一包，这就是TCP的拆包和粘包
 + 原因：
-  + 因为TCP默认会使用 **Nagle算法** ，此算法会导致粘包问题。	
+  + 因为TCP默认会使用 **Nagle算法** ，此算法会导致粘包。	
     + 只有上一个分组得到确认，才会发送下一个分组;
     + 收集多个小分组，在一个确认到来时一起发送。
   + 应用程序写入数据的字节大小大于套接字发送缓冲区大小
@@ -313,8 +314,8 @@
 
 ##### 2. **讲讲TCP KeepAlive(保活机制,即心跳包)**
 
-+ TCP连接的双方在连接空闲状态时，如果一方意外崩溃、当机、网线断开或路由器故障，另一方无法得知TCP连接已经失效。另一方并不知道对端的情况，会一直维护这个连接。长时间的积累会导致非常多的半打开连接，造成端系统资源的消耗和浪费，
-+ 所以当一个 TCP 连接建立之后，启用 TCP Keepalive 的一端便会启动一个计时器，当这个计时器经过tcp_keep-alive_time时间到达 0 之后便会被发出纯 ACK 包去进行探测。根据对方的回应做出后序操作。
++ TCP连接双方在连接空闲状态时，如果一方发生意外，另一方无法得知TCP连接已经失效，会一直维护这个连接。长时间的积累会导致非常多的半打开连接，造成端系统资源的消耗和浪费，
++ 所以 TCP 连接建立后，启用 TCP Keepalive 的一端便会启动一个计时器，当tcp_keep-alive_time时间到达 0 之后便会被发出纯 ACK 包去进行探测。根据对方的回应做出后序操作。
 
 ---
 
@@ -3030,7 +3031,7 @@ int main() {
 
 ## 五.数据库
 
-### 1,Mysql
+### 1.Mysql
 
 + 索引分类和原理----B+树，具体分析
 
@@ -3193,7 +3194,6 @@ int main() {
 
 
 ### 2.Redis
-
 
 
 
