--- a/秋招经历/面经2️⃣.md
+++ b/秋招经历/面经2️⃣.md
@@ -1414,13 +1414,163 @@ s2 = s; // 赋值运算符操作
 
 ## 三. STL
 
-+ 手写string类
-
-+ 手写
+### STL基本介绍
 
 
 
+### string
 
+##### 1. string 与 C字符串的转换
+
++  data() 以字符数组的形式返回字符串内容，但并不添加 `'\0'`;
++  c_str() 返回一个以 `'\0'` 结尾的字符数组;
++  copy() 则把字符串的内容复制或写入既有的 c_string 或字符数组内。
+
+> 需要注意的是， C++字符串并不以喻’结尾。
+
+```c++
+int copy(p, n, size_type _Off = 0);//将所调用的对象中第 string _Off 位置的 n 个字符复制到 p 指向的空间
+str = "hello world";
+const char * cstr1 = str.data();
+const char * cstr = str.c_str();
+cout << cstr1 << " " << cstr2<< endl;//hello world
+str = "OK";
+cout << cstr1 << " " << cstr2<< endl;//OK OK 
+```
+
+---
+
+##### 2.string 与 int 类型的转换
+
++ int 转为 string 的方法
+
+  ```c++
+  int snprintf(char *str, size_t size, co口st char *format, ...)
+    
+  char a[20] ;
+  int i = snprintf(a, 9, "%d",   12345) ;
+  cout << i <<" "<< a << endl;	//5 12345
+  ```
+
+  + 它将可变个参数 (...) 按照 format格式化成字符串，然后将其复制到str中
+
++ string 转为 int 类型
+
+  + 使用 strtol, stroll, strtoul 或 strtoull 等函数
+
+    ```c++
+    char *endptr ;
+    char nptr []= ” 123abc”;
+    int ret =strtol(nptr, &endptr, 10 ); //指定为十进制
+    cout<<”ret:”<<ret<<" "<<endptr:”<< endptr<<endl;
+    //ret:123 endptr:abc
+    ```
+
+---
+
+##### 3.string的操作方法
+
++ string 的截取操作：
+  + `string substr (size_t pos = 0, size_t len = npos) const;`：拷贝 pos 位置开始的 len 长的字符串作为子串，pos默认为0
+
++ string的插入操作：
+  + `s.insert(pos, args)` ：在pos之前插入args指定的字符
+    + pos可以是下标，也可以是迭代器
+  + `s.append(args)` ：将 args 追加到 s
+
++ string 的修改操作：
+  + `s.assgin(args)`：将args替换string中的字符
+  + `s.replace(range, args)`：将args代替 s 中 range 范围的字符串
+    + range 可以是一个下标和长度，也可以是一对指向 s 的迭代器
++ string的删除操作：
+  + `s.erase(pos,len)`：删除从 pos 开始 的 len 个字符，如果 len 被省略，则删除 pos 后的所有字符 
+
++ 比较大小：compare函数
+
+---
+
+##### string 的搜索操作：
+
++ `s.find(args)` ：查找 s 中args第一次出现的位置
++  `s.rfind(args)` ：查找 s 中args最后一次出现的位置
++ `s.find_first_of(args)` ：查找 s 中args中任意一个字符第一次出现的位置
++ `s.find_last_of(args)` ：查找 s 中args中任意一个字符最后一次出现的位置
++ `s.find_first_not_of(args)` ：查找 s 中查找第一个不在args中的位置
++ `s.find_last_not_of(args)` ：查找 s 中查找最后一个不在args中的位置
+
+找到返回下标，不在返回`string::npos`，是一个static成员，初始化为 -1
+
+> args: (c,pos)  从s中位置pos开始查找c
+
+---
+
+### vector
+
+##### 1.vector元素怎么排序
+
++ 在类中定义重载<函数
++ 定义比较函数，sort参数中应用比较函数
+
+---
+
+##### 2.vector的操作方式
+
++ vector的查找：`find(vec.begin(), vec.end(), num)`
+
+  + 使用 find 函数在 vector 中进行查找 
+
++ vector的删除： （返回删除元素之后元素的迭代器）
+
+  ```c
+  iterator erase (iterator position) 
+  iterator erase (iterator first , iterator last ) 
+  vec.pop_back()
+  ```
+
+  + 需要注意的是，删除非最后元素之后迭代器会失效，所以操作之后需要重新更新 迭代器
+
+    ```c
+    vector<int>::iterator iter = vec.begin();
+    for(; iter != vec.end(); ){
+      	if(*iter == 3) {
+          	iter = vec.erase(iter);
+        } else {
+          	++ iter;
+        }
+    }
+    ```
+
++ vector的增加
+
+  + push_back：在容器最后添加元素
+  + emplace_back：在容器最后构建元素
+  + insert：在位置前插入
+
+  ```c++
+  //在指定位置 loc 前插入值为 val 的元素，返回指向这个元素的迭代器
+  iterator insert (iterator loc , const TYPE &val ) ;
+  //在指定位置 loc 前插入 num 个值为 val 的元素
+  void insert( iterator loc , size_type num, const TYPE &val) ; 
+  //在指定位置 loc 前插入区间[ start, end)的所有元素
+  void insert( iterator loc , input_iterator start, input_iterator end) ; 
+  ```
+
+---
+
+##### 3.vector的内存管理
+
++ v.size()：获得容器中有多少元素
++ v.capacity()：获得容器在它已经分配的内存中可以容纳多少元素 
++ v.resize(Container::size_type n)：强制把容器改为容纳 n个元素 ，不影响capacity
+  + n 小于size，容器尾部的元素会被销毁
+  + n 大于size，新默认构造的元素会添加到容器尾部。 如果 n 大于capacity，在元素加入之前会进行重新分配 
++ v.reserve(Container::size_type n)：强制容器把它的容量改为不小于n，不影响size
+  + 小于等于当前capacity时，reserve什么都不做
+  + 大于当前capacity时，reserve扩张容量
+
+- v.shrink_to_fit()：C++11方法，要求vector/string/deque退回多余的空间，但具体实现可忽略此要求。不保证能退回
+
+vector采用的`内存扩张策略`一般是：在每次需要分配新空间时，将当前容量翻倍。但具体实现可使用不同策略
 
 ---
 
